--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,63 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Video SaaS specific files
+uploads/
+translated/
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.wmv
+*.flv
+*.webm
+*.m4v
+*.3gp
+*.ogv
+
+# Additional media files
+*.wav
+*.mp3
+*.aac
+*.flac
+*.ogg
+*.m4a
+
+# Temporary processing files
+temp/
+processing/
+cache/
+thumbnails/
+previews/
+
+# Additional environment variables for Video SaaS
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Cloud storage credentials
+gcs-key.json
+aws-credentials.json
+azure-credentials.json
+
+# SSL certificates
+*.pem
+*.key
+*.crt
+
+# Backup files
+*.backup
+*.bak
+*.old
+
+# Video processing temporary files
+*.tmp
+*.part
+ffmpeg_*
+*.webm.tmp
+
+# Docker
+docker-compose.override.yml
+.dockerignore
